
- #11476: Add examples in documentation of Hashtbl, Queue, Atomic, Format
  (Simon Cruanes, review by Yotam Barnoy, Gabriel Scherer, Daniel Bünzli,
   Ulugbek Abdullaev, and Nicolás Ojeda Bär)

- #11488: Add Mutex.protect for resource-safe critical sections protected by
  a mutex.
  (Simon Cruanes, review by Gabriel Scherer, Xavier Leroy,
   Guillaume Munch-Maccagnoni)

### Other libraries:

- #11374: Remove pointer cast to a type with stricter alignment requirements
  in Windows implementation of Unix.gettimeofday. Windows implementations of
  caml_unix_map_file, caml_unix_lseek and caml_unix_lseek_64 now release the
  runtime lock. Windows implementation of caml_unix_lockf modernised and
  simplified. Where possible, 64 bit integers are used instead of LARGE_INTEGER
  structs.
  (David Allsopp, review by Jonah Beckford and Xavier Leroy)

- #11475: Make Unix terminal interface bindings domain-safe
  (Olivier Nicole and Xavier Leroy, review by Xavier Leroy)

- #11775: Unix.write on a non-blocking socket under Windows will return normally
  if the write blocks after some data has already been written (as otherwise
  there is no way of knowing how much data has been written before
  blocking). The same behaviour was already present under Unix.
  (Nicolás Ojeda Bär, review by David Allsopp)

### Tools:

- #1172: fix ocamlyacc's handling of raw string literals
  (Demi Marie Obenour)

- #9290: Add a directive to switch off debugging in toplevel.
  This allows to see optimized bytecode with -dlambda.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11166: ocamllex: the union of two character sets "cset1 | cset2" can now be
  used in any context where a character set is expected.
  (Nicolás Ojeda Bär, Martin Jambon, review by Sébastien Hinderer)

- #11774: ocamlyacc: fail if there is an I/O error
  (Demi Marie Obenour)

### Manual and documentation:

- #9430, #11291: Document the general desugaring rules for binding operators.