@@ -34,16 +34,72 @@
 # Basenames of the source files for the standard library (i.e. unprefixed and
 # with lowercase first letters). These must be listed in dependency order.
 STDLIB_MODULE_BASENAMES = \
-  camlinternalFormatBasics stdlib either \
-  sys obj atomic camlinternalLazy lazy \
-  seq option result bool char uchar \
-  list int bytes string unit marshal array float int32 int64 nativeint \
-  lexing parsing set map stack queue buffer \
-  camlinternalFormat printf arg \
-  printexc fun gc digest bigarray random hashtbl weak \
-  format scanf callback camlinternalOO oo camlinternalMod ephemeron \
-  filename complex arrayLabels listLabels bytesLabels stringLabels moreLabels \
-  stdLabels in_channel out_channel
+  camlinternalFormatBasics \
+  stdlib \
+  type \
+  either \
+  sys \
+  obj \
+  atomic \
+  camlinternalLazy \
+  lazy \
+  seq \
+  option \
+  result \
+  bool \
+  char \
+  uchar \
+  list \
+  int \
+  bytes \
+  string \
+  unit \
+  marshal \
+  array \
+  float \
+  int32 \
+  int64 \
+  nativeint \
+  lexing \
+  parsing \
+  set \
+  map \
+  stack \
+  queue \
+  buffer \
+  mutex \
+  condition \
+  semaphore \
+  domain \
+  camlinternalFormat \
+  printf \
+  arg \
+  printexc \
+  fun \
+  gc \
+  digest \
+  bigarray \
+  random \
+  hashtbl \
+  weak \
+  format \
+  scanf \
+  callback \
+  camlinternalOO \
+  oo \
+  camlinternalMod \
+  ephemeron \
+  filename \
+  complex \
+  arrayLabels \
+  listLabels \
+  bytesLabels \
+  stringLabels \
+  moreLabels \
+  stdLabels \
+  in_channel \
+  out_channel \
+  effect
 
 STDLIB_PREFIXED_MODULES = \
   $(filter-out stdlib camlinternal%, $(STDLIB_MODULE_BASENAMES))
