@@ -17,7 +17,7 @@ module type S = sig type t val x : t end
 module Falias (X : S) = X
 [%%expect{|
 {
- "Falias"[module] -> Abs<.4>(X/275, X/275<.3>);
+ "Falias"[module] -> Abs<.4>(X/276, X/276<.3>);
  }
 module Falias : functor (X : S) -> sig type t = X.t val x : t end
 |}]
@@ -29,10 +29,10 @@ end
 {
  "Finclude"[module] ->
    Abs<.6>
-      (X/279,
+      (X/280,
        {
-        "t"[type] -> X/279<.5> . "t"[type];
-        "x"[value] -> X/279<.5> . "x"[value];
+        "t"[type] -> X/280<.5> . "t"[type];
+        "x"[value] -> X/280<.5> . "x"[value];
         });
  }
 module Finclude : functor (X : S) -> sig type t = X.t val x : t end
@@ -45,7 +45,7 @@ end
 [%%expect{|
 {
  "Fredef"[module] ->
-   Abs<.10>(X/286, {
+   Abs<.10>(X/287, {
                     "t"[type] -> <.8>;
                     "x"[value] -> <.9>;
                     });
@@ -223,8 +223,8 @@ module Big_to_small1 : B2S = functor (X : Big) -> X
 [%%expect{|
 {
  "Big_to_small1"[module] ->
-   Abs<.40>(X/381, {<.39>
-                    "t"[type] -> X/381<.39> . "t"[type];
+   Abs<.40>(X/382, {<.39>
+                    "t"[type] -> X/382<.39> . "t"[type];
                     });
  }
 module Big_to_small1 : B2S
@@ -234,8 +234,8 @@ module Big_to_small2 : B2S = functor (X : Big) -> struct include X end
 [%%expect{|
 {
  "Big_to_small2"[module] ->
-   Abs<.42>(X/384, {
-                    "t"[type] -> X/384<.41> . "t"[type];
+   Abs<.42>(X/385, {
+                    "t"[type] -> X/385<.41> . "t"[type];
                     });
  }
 module Big_to_small2 : B2S
